[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimalbinning"
dynamic = ["version"]
description = "A Package for Finding Optimal Width for Unsupervised Binning"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name="Ming-Long Lam", email="mllam@uchicago.edu" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

#[project.urls]
#Documentation = "https://github.com/minglonglam/optimalbinning#readme"
Issues = "https://github.com/minglonglam/github.io/tree/main/optimalbinning/issues"
Source = "https://github.com/minglonglam/github.io/tree/main/optimalbinning"

[tool.hatch.version]
path = "src/optimalbinning/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/optimalbinning tests}"

[tool.coverage.run]
source_pkgs = ["optimalbinning", "tests"]
branch = true
parallel = true
omit = [
  "src/optimalbinning/__about__.py",
]

[tool.coverage.paths]
optimalbinning = ["src/optimalbinning", "*/optimalbinning/src/optimalbinning"]
tests = ["tests", "*/optimalbinning/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
